--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,9 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - ./html:/usr/share/nginx/html
+      - ./webpage/:/usr/share/nginx/html/
+    networks:
+      - my_network
     restart: always
 
   redpage:
@@ -15,6 +17,8 @@ services:
       - "8082:80"
     volumes:
       - ./redblue/red.html:/usr/share/nginx/html/index.html
+    networks:
+      - my_network
     restart: always
 
   bluepage:
@@ -24,18 +28,39 @@ services:
       - "8083:80"
     volumes:
       - ./redblue/blue.html:/usr/share/nginx/html/index.html
+    networks:
+      - my_network
     restart: always
 
   reverse-proxy:
     image: nginx:latest
     container_name: reverse-proxy
     ports:
-      - "8080:80"
+      - "80:8080"
       - "443:443"
     volumes:
-      - ./reverse-proxy/conf.d:/etc/nginx/conf.d/
-      - ./reverse-proxy/cert:/etc/nginx/cert/
+      - ./reverse-proxy/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverse-proxy/cert/:/etc/nginx/cert/
+      - ./reverse-proxy/cert/dhparam.pem:/etc/ssl/certs/dhparam.pem
+      - ./reverse-proxy/conf.d/self-signed.conf:/etc/nginx/snippets/self-signed.conf
+      - ./reverse-proxy/conf.d/ssl-params.conf:/etc/nginx/snippets/ssl-params.conf
+    networks:
+      - my_network
     links:
      - webpage
      - redpage
      - bluepage
+  
+#  noip:
+#    image: ghcr.io/noipcom/noip-duc:latest
+#    container_name: noip
+#    restart: always
+#    env_file:
+#      - noip-duc.env
+#    volumes:
+#      - ./config:/config
+
+networks:
+  my_network:
+    driver: bridge
