--- a/reverse-proxy/conf.d/default.conf
+++ b/reverse-proxy/conf.d/default.conf
@@ -1,27 +1,42 @@
- server {
-  listen 8080;
-  server_name production_wp;
-  
-  error_page 497 http://$host:80$request_uri;
-
-  ssl on;
-  ssl_certificate /etc/nginx/cert/star_xx_com.crt;
-  ssl_certificate_key /etc/nginx/cert/star_xx_com.key;
-
-  location /wp {
-    proxy_pass          http://localhost:8081/wp;
-     rewrite /wp(.*) /origin-d$1
-            proxy_pass http://localhost:8081;
-            proxy_redirect / /wp;
-            sub_filter 'href="/' 'href="/wp'
-    
-  }  
+upstream backend {
+    server redpage:80 max_fails=2 fail_timeout=5s;
+    server bluepage:80 max_fails=2 fail_timeout=5s;
 }
 
-# wordpress container via production_wp
- server {
-  listen 443;
-  server_name production_wp;
+server {
+    listen 8080 default_server;
+
+    server_name _;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  server_name proxy;
+  
+  include snippets/self-signed.conf;
+  include snippets/ssl-params.conf;
+  
 
   error_page 497 http://$host:80$request_uri;
+
+  
+  location / {
+    return 301 https://$host/wp;
+  }
+
+  location /wp {
+    rewrite ^/wp(/.*)$ $1 break;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    proxy_pass http://webpage:80/;
+  }  
+
+  location /redblue {
+    rewrite ^/redblue(/.*)$ $1 break;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    proxy_pass http://backend/;
+  }  
 }
