Added some pages, made php server info, etc

--- a/reverse-proxy/conf.d/default.conf
+++ b/reverse-proxy/conf.d/default.conf
@@ -39,4 +39,14 @@ server {
     proxy_redirect off;
     proxy_pass http://backend/;
   }  
+
+  location ~ \.png {
+  
+  }
+
+  location ~ \.jpg {
+    
+  }
+
+
 }
