--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,21 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - ./webpage/:/usr/share/nginx/html/
+      - ./webpage.conf:/etc/nginx/conf.d/default.conf:ro,z
+      - ./host/:/usr/share/nginx/html/:ro,z
     networks:
       - my_network
+    depends_on:
+      - php
     restart: always
+
+  php:
+    image: php:7.4-fpm
+    container_name: php-fpm
+    volumes:
+      - ./host/:/usr/share/nginx/html/:ro,z
+    networks:
+      - my_network
 
   redpage:
     image: nginx:latest
@@ -16,7 +27,7 @@ services:
     ports:
       - "8082:80"
     volumes:
-      - ./redblue/red.html:/usr/share/nginx/html/index.html
+      - ./redblue/red.html:/usr/share/nginx/html/index.html:ro,z
     networks:
       - my_network
     restart: always
@@ -27,7 +38,7 @@ services:
     ports:
       - "8083:80"
     volumes:
-      - ./redblue/blue.html:/usr/share/nginx/html/index.html
+      - ./redblue/blue.html:/usr/share/nginx/html/index.html:ro,z
     networks:
       - my_network
     restart: always
@@ -39,12 +50,12 @@ services:
       - "80:8080"
       - "443:443"
     volumes:
-      - ./reverse-proxy/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
-      - ./reverse-proxy/cert/:/etc/nginx/cert/
-      - ./reverse-proxy/cert/dhparam.pem:/etc/ssl/certs/dhparam.pem
-      - ./reverse-proxy/conf.d/self-signed.conf:/etc/nginx/snippets/self-signed.conf
-      - ./reverse-proxy/conf.d/ssl-params.conf:/etc/nginx/snippets/ssl-params.conf
+      - ./reverse-proxy/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro,z
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf:ro,z
+      - ./reverse-proxy/cert/:/etc/nginx/cert/:ro,z
+      - ./reverse-proxy/cert/dhparam.pem:/etc/ssl/certs/dhparam.pem:ro,z
+      - ./reverse-proxy/conf.d/self-signed.conf:/etc/nginx/snippets/self-signed.conf:ro,z
+      - ./reverse-proxy/conf.d/ssl-params.conf:/etc/nginx/snippets/ssl-params.conf:ro,z
     networks:
       - my_network
     links:
