Many fixes Add cpu load Add image task Add logs Making image for every server

--- a/reverse-proxy/conf.d/default.conf
+++ b/reverse-proxy/conf.d/default.conf
@@ -4,7 +4,7 @@ upstream backend {
 }
 
 server {
-    listen 8080 default_server;
+    listen 80 default_server;
 
     server_name _;
 
@@ -20,18 +20,18 @@ server {
   
 
   error_page 497 http://$host:80$request_uri;
-
-  
   location / {
     return 301 https://$host/wp;
   }
 
   location /wp {
-    rewrite ^/wp(/.*)$ $1 break;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    proxy_pass http://webpage:80/;
-  }  
+      rewrite ^/wp(/.*)$ $1 break;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass http://webpage/;
+  }
 
   location /redblue {
     rewrite ^/redblue(/.*)$ $1 break;
@@ -39,14 +39,4 @@ server {
     proxy_redirect off;
     proxy_pass http://backend/;
   }  
-
-  location ~ \.png {
-  
-  }
-
-  location ~ \.jpg {
-    
-  }
-
-
 }
