--- a/webpage/default.conf
+++ b/webpage/default.conf
@@ -1,18 +1,27 @@
 server {
     root /usr/share/nginx/html;
 
-    location ~ \.(gif|jpg|png)$ {
-        root /usr/share/nginx/html/host/img;
-    }
-
     location /external_link {
         return 301 https://google.com;
     }
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php-fpm:9000; # Убедитесь, что "php-fpm" настроен правильно
+        fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     } 
+    location ~ \.png {
+        try_files $uri /img/elephant.png;
+    }
+
+    location ~ \.jpg {
+        image_filter rotate 180;
+        try_files $uri /img/cat.jpg;
+    }
+
+    location = /cpu_load {
+        root /tmp;
+        index cpu_load;
+    }
 }
