--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,67 +1,62 @@
 services:
   webpage:
-    image: nginx:latest
+    build: 
+      context: .
+      dockerfile: webpage.Dockerfile
     container_name: webpage
-    ports:
-      - "8081:80"
-    volumes:
-      - ./webpage.conf:/etc/nginx/conf.d/default.conf:ro,z
-      - ./host/:/usr/share/nginx/html/:ro,z
     networks:
       - my_network
+    
     depends_on:
       - php
     restart: always
 
   php:
-    image: php:7.4-fpm
+    build: 
+      context: .
+      dockerfile: php.Dockerfile
     container_name: php-fpm
-    volumes:
-      - ./host/:/usr/share/nginx/html/:ro,z
     networks:
       - my_network
+    restart: always
 
   redpage:
-    image: nginx:latest
+    build: 
+      context: .
+      dockerfile: redpage.Dockerfile
     container_name: redpage
-    ports:
-      - "8082:80"
-    volumes:
-      - ./redblue/red.html:/usr/share/nginx/html/index.html:ro,z
     networks:
       - my_network
     restart: always
 
   bluepage:
-    image: nginx:latest
+    build: 
+      context: .
+      dockerfile: bluepage.Dockerfile
     container_name: bluepage
-    ports:
-      - "8083:80"
-    volumes:
-      - ./redblue/blue.html:/usr/share/nginx/html/index.html:ro,z
     networks:
       - my_network
     restart: always
 
   reverse-proxy:
-    image: nginx:latest
+    build: 
+      context: .
+      dockerfile: reverse-proxy.Dockerfile
     container_name: reverse-proxy
     ports:
-      - "80:8080"
+      - "80:80"
       - "443:443"
     volumes:
-      - ./reverse-proxy/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro,z
-      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf:ro,z
       - ./reverse-proxy/cert/:/etc/nginx/cert/:ro,z
       - ./reverse-proxy/cert/dhparam.pem:/etc/ssl/certs/dhparam.pem:ro,z
-      - ./reverse-proxy/conf.d/self-signed.conf:/etc/nginx/snippets/self-signed.conf:ro,z
-      - ./reverse-proxy/conf.d/ssl-params.conf:/etc/nginx/snippets/ssl-params.conf:ro,z
+      - ./logs/:/var/log/nginx/
     networks:
       - my_network
     links:
      - webpage
      - redpage
      - bluepage
+    restart: always
   
 #  noip:
 #    image: ghcr.io/noipcom/noip-duc:latest
